# AugSpec

./: .gitignore  IMPLEMENTATION_PLAN.md  PROGRESS.md  PROJECT_GUIDE.md  README.md  install.sh  next_step.md  offload_plan.md  phase0_1.md  pyproject.toml  refactor_and_cooccur_plan.md  specmoe_pin_plan.md  verify_merge_plan.md
cluster_labels/: labels_cooccur_K16.json  labels_cooccur_bal_K16.json  labels_random_K16.json  labels_statfreq_K16.json
configs/: README.md  _smoke.yaml  _smoke_count.yaml  _smoke_offload.yaml  _smoke_offload_count.yaml  _smoke_offload_qwen3.yaml  _smoke_offload_random.yaml  _smoke_random.yaml  base_specmoe_hf.yaml  base_specmoe_offload.yaml  base_topm_hf.yaml  base_topm_offload.yaml  cmp_eng_specmoe.yaml  cmp_eng_topm.yaml  cmp_engbmm_specmoe.yaml  cmp_engbmm_topm.yaml  cmp_full_engbmm_specmoe.yaml  cmp_full_engbmm_topm.yaml  cmp_opt_specmoe.yaml  cmp_opt_topm.yaml  cmp_opt_topm_v04.yaml  cmp_specmoe_N16_hf.yaml  cmp_specmoe_N16_offload.yaml  cmp_topm_bmm.yaml  cmp_topm_bmm_ctrl.yaml  cmp_topm_m32k16_hf.yaml  cmp_topm_m32k16_offload.yaml  cmp_topm_m32k16_offload_cppmerge.yaml  cmp_topm_noopt.yaml  cmp_topm_noopt_v04.yaml  cmp_topm_opt.yaml  cmp_topm_opt_m64.yaml  cmp_topm_p4.yaml  cmp_topmov_off.yaml  cmp_topmov_on.yaml  exp_ep_late.yaml  exp_ep_off.yaml  exp_ep_on.yaml  exp_noov.yaml  gptoss_count.yaml  (+71 more)
diary/: 0602.md
moe_infinity/: demo.py  install_twcc.sh  rebuild.sh  requirements.txt  run.sh  setup.py
paper/: sec3_4_verify_merge.tex
scripts/: analyze_active_set.py  analyze_cluster_weights.py  analyze_cycle_overlap.py  example.sh  (+72 more)
(+91 files in other folders)
