[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aug_spec"
version = "0.1.0"
description = "Augmented speculative decoding for MoE inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.55",   # 4.55 introduces `gpt_oss` model_type (openai/gpt-oss-20b)
    "accelerate>=1.6",
    "huggingface-hub",
    "pyyaml",
    "numpy",
]

[project.scripts]
aug_spec = "aug_spec.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aug_spec*"]
